feature: buy kuota ai
